--- a/Reflect/src/main/res/layout/activity_main.xml
+++ b/Reflect/src/main/res/layout/activity_main.xml
@@ -1,18 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/getConstructor"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="获取构造方法" />
 
-</RelativeLayout>
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/getField"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="获取构造方法" />
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/getMethod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="获取构造方法" />
+
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+</LinearLayout>
